backend/ts-node-error.txt
C:\Users\jeanl\OneDrive\Escritorio\Mis codigos\Project MiTurnoRD\backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: Γ¿» Unable to compile TypeScript:
create-saas-admin.ts(4,33): error TS2345: Argument of type '{}' is not assignable to parameter of type 'Subset<PrismaClientOptions, PrismaClientOptions>'.

    at createTSError (C:\Users\jeanl\OneDrive\Escritorio\Mis codigos\Project MiTurnoRD\backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\jeanl\OneDrive\Escritorio\Mis codigos\Project MiTurnoRD\backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\jeanl\OneDrive\Escritorio\Mis codigos\Project MiTurnoRD\backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\jeanl\OneDrive\Escritorio\Mis codigos\Project MiTurnoRD\backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\jeanl\OneDrive\Escritorio\Mis codigos\Project MiTurnoRD\backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1706:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\jeanl\OneDrive\Escritorio\Mis codigos\Project MiTurnoRD\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
    at Function._load (node:internal/modules/cjs/loader:1108:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2345 ]
}
